SERVER-128465: Fix dependency graph arrayness for dotted path modifications that array-traverse their prefix (#56388)

GitOrigin-RevId: 35fd532935425f4cf5ab90a7efa3ee2f8a611f77